@@ -1,18 +1,27 @@
 package io.openems.edge.app.heat;
 
 import static io.openems.edge.common.test.DummyUser.DUMMY_ADMIN;
+import static io.openems.edge.common.test.DummyUser.DUMMY_OWNER;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 
-import org.junit.Before;
-import org.junit.Test;
+import java.util.List;
 
-import com.google.common.collect.ImmutableList;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
+import com.google.gson.JsonObject;
+
+import io.openems.common.jsonrpc.request.UpdateComponentConfigRequest;
+import io.openems.common.jsonrpc.type.CreateComponentConfig;
 import io.openems.common.utils.JsonUtils;
 import io.openems.edge.app.api.ModbusTcpApiReadOnly;
 import io.openems.edge.app.api.RestJsonApiReadOnly;
 import io.openems.edge.app.integratedsystem.FeneconHome10;
 import io.openems.edge.app.integratedsystem.TestFeneconHome10;
+import io.openems.edge.app.integratedsystem.TestFeneconHome20;
+import io.openems.edge.app.meter.EastronMeter;
+import io.openems.edge.app.meter.SocomecMeter;
 import io.openems.edge.common.test.ComponentTest;
 import io.openems.edge.core.appmanager.AppManagerTestBundle;
 import io.openems.edge.core.appmanager.Apps;
@@ -28,21 +37,28 @@ public class TestHeatPump {
 
 	private FeneconHome10 homeApp;
 
+	private EastronMeter internMeter;
+
+	private SocomecMeter externMeter;
+
 	private ModbusTcpApiReadOnly modbusTcpApiReadOnly;
 	private RestJsonApiReadOnly restJsonApiReadOnly;
 
-	@Before
+	@BeforeEach
 	public void beforeEach() throws Exception {
-		final var componentFactory = new AppManagerTestBundle.DefaultComponentManagerFactory();
+		final var componentFactory = new AppManagerTestBundle.PseudoComponentManagerFactory();
 		this.appManagerTestBundle = new AppManagerTestBundle(null, null, t -> {
-			return ImmutableList.of(//
+			return List.of(//
 					this.heatPump = Apps.heatPump(t), //
 					this.homeApp = Apps.feneconHome10(t), //
+					Apps.feneconHome20(t), //
 					Apps.gridOptimizedCharge(t), //
 					Apps.selfConsumptionOptimization(t), //
 					Apps.socomecMeter(t), //
 					this.modbusTcpApiReadOnly = Apps.modbusTcpApiReadOnly(t), //
-					this.restJsonApiReadOnly = Apps.restJsonApiReadOnly(t) //
+					this.restJsonApiReadOnly = Apps.restJsonApiReadOnly(t), //
+					this.internMeter = Apps.eastronMeter(t), //
+					this.externMeter = Apps.socomecMeter(t) //
 			);
 		}, null, componentFactory);
 
@@ -99,4 +115,85 @@ public class TestHeatPump {
 		assertEquals(1, heatPumpInstance.dependencies.size());
 	}
 
+	@Test
+	public void testInternMeterDependency() throws Exception {
+
+		this.createHome20();
+
+		this.appManagerTestBundle.sut.handleAddAppInstanceRequest(DUMMY_ADMIN,
+				new AddAppInstance.Request(this.heatPump.getAppId(), "key2", "alias2", getHeatPumpWithInternMeter()));
+
+		this.testInitiatedAppsSizeWithMeter();
+		this.testDependencySizeWithMeter();
+		this.testCorrectMeterDependencyExists(this.internMeter.getAppId());
+	}
+
+	@Test
+	public void testExternMeterDependency() throws Exception {
+
+		this.createHome20();
+		this.createExternMeterComponentAndApp();
+
+		this.appManagerTestBundle.sut.handleAddAppInstanceRequest(DUMMY_ADMIN,
+				new AddAppInstance.Request(this.heatPump.getAppId(), "key3", "alias3", getHeatPumpWithExternMeter()));
+
+		this.testInitiatedAppsSizeWithMeter();
+		this.testDependencySizeWithMeter();
+		this.testCorrectMeterDependencyExists(this.externMeter.getAppId());
+	}
+
+	private static JsonObject getHeatPumpWithInternMeter() {
+		return JsonUtils.buildJsonObject() //
+				.addProperty("OUTPUT_CHANNEL_1", "io0/InputOutput0") //
+				.addProperty("OUTPUT_CHANNEL_2", "io0/InputOutput1") //
+				.addProperty("IS_ELEMENT_MEASURED", true) //
+				.addProperty("HOW_MEASURED", "INTERN") //
+				.build();
+	}
+
+	private static JsonObject getHeatPumpWithExternMeter() {
+		return JsonUtils.buildJsonObject() //
+				.addProperty("OUTPUT_CHANNEL_1", "io0/InputOutput0") //
+				.addProperty("OUTPUT_CHANNEL_2", "io0/InputOutput1") //
+				.addProperty("IS_ELEMENT_MEASURED", true) //
+				.addProperty("HOW_MEASURED", "EXTERN") //
+				.addProperty("METER_ID", "meter4") //
+				.build();
+	}
+
+	private void createHome20() throws Exception {
+		this.appManagerTestBundle.sut.handleAddAppInstanceRequest(DUMMY_ADMIN,
+				new AddAppInstance.Request("App.FENECON.Home.20", "key", "alias", TestFeneconHome20.fullSettings()));
+	}
+
+	private void createExternMeterComponentAndApp() throws Exception {
+		final var meterProperties = List.of(//
+				new UpdateComponentConfigRequest.Property("id", "meter4") //
+		);
+		this.appManagerTestBundle.componentManger.handleCreateComponentConfigRequest(DUMMY_OWNER,
+				new CreateComponentConfig.Request("Meter.Socomec.Threephase", meterProperties));
+
+		this.appManagerTestBundle.sut.handleAddAppInstanceRequest(DUMMY_ADMIN,
+				new AddAppInstance.Request(this.externMeter.getAppId(), "key2", "key2",
+						JsonUtils.buildJsonObject().addProperty("METER_ID", "meter4").build()));
+	}
+
+	private void testInitiatedAppsSizeWithMeter() {
+		assertEquals(6, this.appManagerTestBundle.sut.getInstantiatedApps().size());
+	}
+
+	private void testDependencySizeWithMeter() {
+		var heatPumpInstance = this.appManagerTestBundle.findFirst(this.heatPump.getAppId());
+		assertEquals(2, heatPumpInstance.dependencies.size());
+	}
+
+	private void testCorrectMeterDependencyExists(//
+			final String meterAppId //
+	) {
+		var heatPumpInstance = this.appManagerTestBundle.findFirst(this.heatPump.getAppId());
+		var meterInstance = this.appManagerTestBundle.findFirst(meterAppId);
+		var meterDependency = heatPumpInstance.dependencies.stream()
+				.filter(d -> d.instanceId.equals(meterInstance.instanceId)).findFirst();
+		assertNotNull(meterDependency);
+	}
 }
